<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#971919"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/Login_logo_id"
        android:layout_width="212dp"
        android:layout_height="181dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="120dp"

        android:contentDescription="@string/login_image"
        android:src="@drawable/logo_dex_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="204dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/italianno"
        android:gravity="center"
        android:text="@string/info_dex"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_logo_id"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="106dp"
        android:layout_height="121dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/italianno"
        android:gravity="center"
        android:text="@string/atrapalos_a_todos"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextSizeCheck,TextSizeCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Login_button"
        android:layout_width="227dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="41dp"
                android:layout_height="33dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/google_image"
                android:foregroundGravity="center"
                android:src="@drawable/google_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="131dp"
                android:layout_height="26dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="8dp"
                android:text="@string/login_wit_google"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.792"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="TextSizeCheck,TextSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>