<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PokemonViewID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".PokemonViewFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/pokemonCardID"
        android:layout_width="307dp"
        android:layout_height="201dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:elevation="20dp"
        app:cardBackgroundColor="#787171"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="158dp"
                android:layout_height="210dp"
                android:layout_marginStart="164dp"
                android:background="@drawable/pokemon_card_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/ItemNameID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/name_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck"
                android:textColor="#FAFAFA"/>

            <TextView
                android:id="@+id/PokedexID"
                android:layout_width="56dp"
                android:layout_height="20dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="4dp"
                android:text="@string/id"
                app:layout_constraintStart_toEndOf="@+id/ItemNameID"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck,TextContrastCheck"
                android:textColor="#FAFAFA"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="55dp"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/tipo"
                android:textColor="#FAFAFA"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ItemNameID"
                tools:ignore="SmallSp,TextSizeCheck" />

            <TextView
                android:id="@+id/TypeID"
                android:layout_width="55dp"
                android:layout_height="16dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:text="@string/placeholder"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ItemNameID"
                tools:ignore="SmallSp,TextContrastCheck,TextSizeCheck"
                android:textColor="#FAFAFA"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="116dp"
                android:text="@string/altura"
                android:textColor="#FAFAFA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="16dp"
                android:text="@string/peso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="TextContrastCheck"
                android:textColor="#FAFAFA"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sexo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:ignore="TextContrastCheck"
                android:textColor="#FAFAFA"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/habilidad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                tools:ignore="TextContrastCheck"
                android:textColor="#FAFAFA" />

            <TextView
                android:id="@+id/alturaID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/placeholder"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                tools:ignore="TextContrastCheck"
                android:textColor="#FAFAFA"/>

            <TextView
                android:id="@+id/descripcionItemID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/placeholder"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                tools:ignore="TextContrastCheck"
                android:textColor="#FAFAFA"/>

            <TextView
                android:id="@+id/genderID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/placeholder"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11"
                tools:ignore="TextContrastCheck"
                android:textColor="#FAFAFA"/>

            <TextView
                android:id="@+id/HabilidadID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/placeholder"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toTopOf="@+id/textView12"
                tools:ignore="TextContrastCheck"
                android:textColor="#FAFAFA"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="98dp"
                android:layout_height="103dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/pokemon_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="326dp"
        android:layout_height="96dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:elevation="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonCardID">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/descripcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/CombatPlaceholderID"
                android:layout_width="308dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/infoplaceholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="326dp"
        android:layout_height="100dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:elevation="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="4dp"
                android:text="@string/habilidad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/placeholder"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toTopOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="312dp"
                android:layout_height="54dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/infoplaceholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="324dp"
        android:layout_height="140dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:elevation="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="129dp"
                android:layout_marginTop="6dp"
                android:text="@string/ubicacion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/LocationID"
                android:layout_width="300dp"
                android:layout_height="92dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/infoplaceholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
