<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="83dp"
        android:layout_height="105dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="124dp"
        android:elevation="20dp"
        app:cardBackgroundColor="#C3C8D2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pokemon_evolution_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/pokemonStateID"
                android:layout_width="39dp"
                android:layout_height="41dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/evolutionview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/pokemonName"
                android:layout_width="47dp"
                android:layout_height="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/pokemonName"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonStateID"
                tools:ignore="SmallSp,TextContrastCheck,TextSizeCheck" />

            <TextView
                android:id="@+id/PokemonLevel"
                android:layout_width="47dp"
                android:layout_height="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:text="@string/pokemon_level"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonName"
                tools:ignore="SmallSp,TextContrastCheck,TextSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>